Feature: Make 'Book an Appointment' visible for mobile platform [By Mathieu B.]

--- a/services.html
+++ b/services.html
@@ -82,12 +82,10 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="faq.html">FAQs</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a class="cta-btn d-none d-sm-block" href="appointment.html"><strong>Book an Appointment</strong></a></li>
+            <li><a class="cta-btn d-sm-block" href="appointment.html"><strong>Book an Appointment</strong></a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
-
-        <!-- <a class="cta-btn d-none d-sm-block" href="appointment.html">Book an Appointment</a> -->
 
       </div>
 
