--- a/faq.html
+++ b/faq.html
@@ -82,11 +82,10 @@
             <li><a href="blog.html">Blog</a></li>
             <li><a href="#" class="active">FAQs</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a class="cta-btn d-sm-block" href="appointment.html"><strong>Book an Appointment</strong></a></li>
           </ul>
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
-
-        <a class="cta-btn d-none d-sm-block" href="appointment.html">Book an Appointment</a>
 
       </div>
 
