Updated Corporate caare and blog pages

--- a/services.html
+++ b/services.html
@@ -98,7 +98,7 @@
     <!-- Call To Action Section -->
     <section id="call-to-action-3" class="call-to-action-3 section">
 
-      <div class="container" data-aos="zoom-out">
+      <div class="container" data-aos="zoom-in" data-aos-delay="200">
 
         <div class="row g-5">
 
@@ -133,7 +133,7 @@
     <!-- Call To Action 2 Section -->
     <section id="call-to-action-3" class="call-to-action-3 section">
 
-      <div class="container" data-aos="zoom-out">
+      <div class="container" data-aos="zoom-in" data-aos-delay="200">
 
         <div class="row g-5">
 
@@ -168,7 +168,7 @@
     <!-- Call To Action 3 Section -->
     <section id="call-to-action-3" class="call-to-action-3 section">
 
-      <div class="container" data-aos="zoom-out">
+      <div class="container" data-aos="zoom-in" data-aos-delay="200">
 
         <div class="row g-5">
 
@@ -216,7 +216,7 @@
     <!-- Call To Action 4 Section -->
     <section id="call-to-action-3" class="call-to-action-3 section">
 
-      <div class="container" data-aos="zoom-out">
+      <div class="container" data-aos="zoom-in" data-aos-delay="200">
 
         <div class="row g-5">
 
@@ -251,7 +251,7 @@
     <!-- Call To Action 5 Section -->
     <section id="call-to-action-3" class="call-to-action-3 section">
 
-      <div class="container" data-aos="zoom-out">
+      <div class="container" data-aos="zoom-in" data-aos-delay="200">
 
         <div class="row g-5">
 
@@ -284,7 +284,7 @@
     <!-- Call To Action 6 Section -->
     <section id="call-to-action-3" class="call-to-action-3 section">
 
-      <div class="container" data-aos="zoom-out">
+      <div class="container" data-aos="zoom-in" data-aos-delay="200">
 
         <div class="row g-5">
 
@@ -333,7 +333,7 @@
     <!-- Call To Action 7 Section -->
     <section id="call-to-action-3" class="call-to-action-3 section">
 
-      <div class="container" data-aos="zoom-out">
+      <div class="container" data-aos="zoom-in" data-aos-delay="200">
 
         <div class="row g-5">
 
