--- a/V1.0/contact.html
+++ b/V1.0/contact.html
@@ -100,7 +100,7 @@
 
         <div class="row gy-4">
 
-          <div class="col-lg-5">
+          <div class="col-lg-12">
 
             <div class="info-wrap">
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
@@ -133,6 +133,7 @@
               <iframe src="https://www.google.com/maps/d/embed?mid=11UwwDn5V_SMN3B56ylFxPizrYZToPb0&ehbc=2E312F&noprof=1" width="100%" height="480"></iframe>          
             </div>
           </div>
+          <!-- Contact Form 
           <div class="col-lg-7">
             <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
@@ -158,16 +159,16 @@
                 </div>
 
                 <div class="col-md-12 text-center">
-                  <!-- <div class="loading">Loading</div> -->
-                  <!-- <div class="error-message"></div> -->
-                  <!-- <div class="sent-message">Your message has been sent. Thank you!</div> -->
+                   <div class="loading">Loading</div> 
+                   <div class="error-message"></div> 
+                   <div class="sent-message">Your message has been sent. Thank you!</div> 
 
                   <button type="submit">Send Message</button>
                 </div>
 
               </div>
             </form>
-          </div><!-- End Contact Form -->
+          </div>End Contact Form -->
 
         </div>
 
