--- a/V1.0/services.html
+++ b/V1.0/services.html
@@ -37,14 +37,12 @@
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
           <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:info@pinkclinicng.com">info@pinkclinicNG.com</a></i>
-          <i class="bi bi-phone d-flex align-items-center ms-4"><span>+234 809 78186 07</span></i>
+          <a href="tel:+2348097818607"><i class="bi bi-phone d-flex align-items-center ms-4"><span>+234 809 78186 07</span></i></a>
         </div>
         <div class="social-links d-none d-md-flex align-items-center">
-          <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-          <a href="https://wa.me/2348097818607?test=I'm%20interested%20in%20your%20service"><i class="bi bi-whatsapp"></i></a>
+          <a href="https://www.tiktok.com/@sexualhealthpinkclinicng" target="_blank" class="tiktok"><i class="bi bi-tiktok"></i></a>
+          <a href="https://www.instagram.com/pinkclinicng/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://wa.me/2348097818607?test=I%20am%20interested%20in%20your%20service" target="_blank"><i class="bi bi-whatsapp"></i></a>
         </div>
       </div>
     </div><!-- End Top Bar -->
@@ -56,7 +54,7 @@
           <!-- Uncomment the line below if you also wish to use an image logo -->
           <!-- <img src="assets/img/logo.png" alt=""> 
           <h1 class="sitename">Pink Clinic</h1> -->
-          <img src="assets/img/logo/logo.png" width="120px"  alt="Pink Clinic">
+          <img src="assets/img/logo/logo.png" width="180px"  alt="Pink Clinic">
         </a>
         
         <nav id="navmenu" class="navmenu">
@@ -463,64 +461,63 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span class="sitename">Pink Clinic</span>
           </a>
+          <p>Your health and confidentiality are our priority.</p>
           <div class="footer-contact pt-3">
             <p><strong>Opening Hours</strong></p>
             <p><strong>Mon - Sat:</strong> 8am - 6pm</p>
             <p><strong>Sunday:</strong> 9am - 3pm</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+234 818 70070 56</span></p>
-            <p><strong>Phone:</strong> <span>+234 809 78186 07</span></p>
+            <p class="mt-3"><strong>Phone:</strong> <span><a href="tel:+2348149225771">+234 814 92257 71</a></span></p>
+            <p><strong>Phone:</strong> <span><a href="tel:+2348097818607">+234 809 78186 07</a></span></p>
             <p><strong>Email:</strong> <a href="mailto:info@pinkclinicng.com">info@PinkClinicNG.com</a></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
-            <a href="https://wa.me/2348097818607?test=I'm%20interested%20in%20your%20service"><i class="bi bi-whatsapp"></i></a>
+            <a href="https://www.tiktok.com/@sexualhealthpinkclinicng" target="_blank" class="tiktok"><i class="bi bi-tiktok"></i></a>
+            <a href="https://www.instagram.com/pinkclinicng/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://wa.me/2348097818607?test=I%20am%20interested%20in%20your%20service" target="_blank"><i class="bi bi-whatsapp"></i></a>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h3>Useful Links</h3>
+          <h4>Useful Links</h4>
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Services</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Our Services</h4>
+          <ul>
+            <li><a href="#">STI Screening</a></li>
+            <li><a href="#">STI Treatment</a></li>
+            <li><a href="#">Guidance & Counselling</a></li>
+            <li><a href="#">Confidential Care</a></li>
+            <li><a href="#">View All Services</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-2 col-md-3 footer-links">
+          <h4>Legal</h4>
+          <ul>
             <li><a href="#">Terms of service</a></li>
             <li><a href="#">Privacy policy</a></li>
+            <li><a href="medical-disclaimer.html">Medical Disclaimer</a></li>
+            <li><a href="cookie-policy.html">Cookie Policy</a></li>
+            <li><a href="patient-rights.html">Patient Rights</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
-          <h3>Our Services</h3>
+          <h4>Find Us Online</h4>
           <ul>
-            <li><a href="#">Web Design</a></li>
-            <li><a href="#">Web Development</a></li>
-            <li><a href="#">Product Management</a></li>
-            <li><a href="#">Marketing</a></li>
-            <li><a href="#">Graphic Design</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h3>Hic solutasetp</h3>
-          <ul>
-            <li><a href="#">Molestiae accusamus iure</a></li>
-            <li><a href="#">Excepturi dignissimos</a></li>
-            <li><a href="#">Suscipit distinctio</a></li>
-            <li><a href="#">Dilecta</a></li>
-            <li><a href="#">Sit quas consectetur</a></li>
-          </ul>
-        </div>
-
-        <div class="col-lg-2 col-md-3 footer-links">
-          <h3>Nobis illum</h3>
-          <ul>
-            <li><a href="#">Ipsam</a></li>
-            <li><a href="#">Laudantium dolorum</a></li>
-            <li><a href="#">Dinera</a></li>
-            <li><a href="#">Trodelas</a></li>
-            <li><a href="#">Flexo</a></li>
+            <li><a href="https://www.tiktok.com/@sexualhealthpinkclinicng" target="_blank" class="tiktok"><i class="bi bi-tiktok"></i>Tik-Tok</a></li>
+            <li><a href="https://www.instagram.com/pinkclinicng/" target="_blank" class="instagram"><i class="bi bi-instagram"></i>Instagram</a></li>
+            <li><a href="https://wa.me/2348097818607?test=I%20am%20interested%20in%20your%20service" target="_blank"><i class="bi bi-whatsapp"></i>whatsapp</a></li>
+            <li><a href="tel:+2348097818607" class="phone"><i class="bi bi-phone"></i>Phone</a></li>
+            <li><a href="mailto:info@pinkclinicng.com" class="email"><i class="bi bi-envelope"></i>Email</a></li>
           </ul>
         </div>
 
@@ -528,8 +525,7 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Pink Clinic</strong> <span>All Rights Reserved</span></p>
-
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Pink Clinic</strong>  <span id="copyright-year">2024</span>. <span>All Rights Reserved</span> - <span>Build By </span><strong class="px-1 sitename"><a href="#">Disruptive Collective</a></strong></p>
     </div>
 
   </footer>
