Update Services And Corporate New Design

--- a/V1.0/index.html
+++ b/V1.0/index.html
@@ -62,10 +62,12 @@
             <li><a href="#" class="active">Home<br></a></li>
             <li class="dropdown #services"><a href="services.html"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
               <ul>
-                <li><a href="services.html#jump-here">Dropdown 1</a></li>
-                <li><a href="services.html#jump-here">Dropdown 2</a></li>
-                <li><a href="services.html#jump-here">Dropdown 3</a></li>
-                <li><a href="services.html#jump-here">Dropdown 4</a></li>
+                <li><a href="services.html#jump-one">STI Screening Package</a></li>
+                <li><a href="services.html#jump-two">Vaccinations</a></li>
+                <li><a href="services.html#jump-three">Birth Control / Family Planing</a></li>
+                <li><a href="services.html#jump-four">Vitamin Therapy</a></li>
+                <li><a href="services.html#jump-five">Pharmaceutical</a></li>
+                <li><a href="services.html#jump-six">Reproductive Health Care</a></li>
               </ul>
             </li>
             <li><a href="corporatecare.html">Corporate Care</a></li>
