Update corporatecare Images and FAQ list

--- a/V1.0/corporatecare.html
+++ b/V1.0/corporatecare.html
@@ -121,10 +121,10 @@
           </div>
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="300">
             <div class="featured-image-container">
-              <img src="assets/img/service/features-3.webp" alt="Digital Solutions" class="img-fluid">
+              <img src="assets/img/corporatecare/features-1.jpg" alt="Digital Solutions" class="img-fluid">
               <div class="floating-badge">
                 <i class="bi bi-award"></i>
-                <span>Industry Leader</span>
+                <span>Available for All Corporate Jobs</span>
               </div>
             </div>
           </div>
@@ -153,6 +153,12 @@
               <div class="advanced-feature-card">
                 <div class="feature-content">
                   <h5>Vaccinations</h5>
+                  <div class="col-lg-12" data-aos="fade-left" data-aos-delay="300">
+                    <div class="featured-image-container">
+                      <img src="assets/img/corporatecare/features-2.jpg" alt="Digital Solutions" class="img-fluid">
+                    </div>
+                  </div>
+                  <br>
                   <p>
                     Vaccines are shots or liquids taken to help your body’s immune defend harmful germs or viruses. 
                     Protect your yourself, workforce and community with essential vaccines. 
@@ -209,6 +215,12 @@
               <div class="advanced-feature-card">
                 <div class="feature-content">
                   <h5>Vitamin Therapy</h5>
+                  <div class="col-lg-12" data-aos="fade-left" data-aos-delay="300">
+                    <div class="featured-image-container">
+                      <img src="assets/img/corporatecare/features-3.jpg" alt="Digital Solutions" class="img-fluid">
+                    </div>
+                  </div>
+                  <br>
                   <p>
                     Vitamin Therapies are intravenous fluid packed with vitamins and infused directly into your blood stream. 
                     It offers your body necessary nutrient and hydration required for different reasons especially for 
@@ -244,6 +256,12 @@
                     you will need to visit the clinic for a proper assessment to know which type of contraceptive will be best for you.
                   </p>
                   <h6>Birth control available at the Pink clinic:</h6>
+                  <div class="col-lg-12" data-aos="fade-left" data-aos-delay="300">
+                    <div class="featured-image-container">
+                      <img src="assets/img/corporatecare/features-4.jpg" alt="Digital Solutions" class="img-fluid">
+                    </div>
+                  </div>
+                  <br>
                   <ul class="feature-benefits">
                     <li><i class="bi bi-check-circle"></i> Condoms</li>
                     <li><i class="bi bi-check-circle"></i> Diaphragm</li>
@@ -407,7 +425,7 @@
               <div class="plan-pricing">
                 <div class="price">
                   <span class="currency">₦</span>
-                  <span class="amount">180,000</span>
+                  <span class="amount">250,000</span>
                   <span class="period"></span>
                 </div>
               </div>
