--- a/V1.0/faq.html
+++ b/V1.0/faq.html
@@ -93,8 +93,8 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-5" data-aos="fade-up">
-            <h2 class="faq-title">Have a question? Check out the FAQ</h2>
+          <div class="col-lg-4" data-aos="fade-up">
+            <h2 class="faq-title">Have a question?<br> Check out the FAQ</h2>
             <p class="faq-description">Safe and Private Sexual Health Care Services.</p>
             <div class="faq-arrow d-none d-lg-block" data-aos="fade-up" data-aos-delay="200">
               <svg class="faq-arrow" width="200" height="211" viewBox="0 0 200 211" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -103,7 +103,7 @@
             </div>
           </div>
 
-          <div class="col-lg-7" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="300">
             <div class="faq-container">
 
               <div class="faq-item faq-active">
@@ -115,15 +115,15 @@
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Can I remove my IUD and put an implant on d  same day?</h3>
+                <h3>Can I remove my IUD and put an implant on the same day?</h3>
                 <div class="faq-content">
-                  <p>Yes , IUD can be removed and replaced with any other contraceptive immediately.</p>
+                  <p>Yes , IUD can be removed and replaced with any other contraceptive immediately as long as you are not pregnant</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3>Am not married, can I use a birth control?</h3>
+                <h3>I am not married, can I use a birth control?</h3>
                 <div class="faq-content">
                   <p>Birth control or contraceptives are safe to use by any woman who is sexually active, married or single.</p>
                 </div>
@@ -141,15 +141,150 @@
               <div class="faq-item">
                 <h3>Will the implant make me add weight?</h3>
                 <div class="faq-content">
-                  <p>Weight gain with implant or any other contraception is not significant , this may or may not happen. Weight gain for most women is due to water retention and usually not more than  1kg to 3kg in 3 years.</p>
+                  <p>
+                    Weight gain with implant or any other contraception is not significant , usually 3kg in 3 years. Maintaining a healthy lifestyle and exercise will help you maintain your weight and aviod water retention.
+                  </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
               <div class="faq-item">
-                <h3> I am having recurring infections and vagina discharges,  What drugs  can I take?</h3>
+                <h3> I am having recurring infections,  What test can I do?</h3>
                 <div class="faq-content">
-                  <p>Recurring infections maybe sexually or non sexually transmitted. Carrying out a proper investigation and examination at the clinic will be the first great step to solving the problem. Book your appointment now.</p>
+                  <p>
+                    Reoccurring infections - Sorry about this, you may need to come to the clinic to explain your symptoms to the consultant for proper examination.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>I am getting married. Do I need to get a test or checkup before marriage? </h3>
+                <div class="faq-content">
+                  <p>
+                    Yes, you do. "Premarital screening tests are accurate, confidential, and very quick. It includes (Female) HIV, Genotype, PT Test, Hep B and C, Blood Group, Complete Blood Count, Tuberculosis, Hormone profile / Fertility test. (Male) Complete Blood Count, HIV, Hepatis B and C, Semen Analysis".
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>My breast has been producing milk, and I’m not pregnant or breast feeding, please what’s the cause?</h3>
+                <div class="faq-content">
+                  <p>
+                    If you are not pregnant or breastfeeding, breast discaharge is most likely due to high prolactin, Hormonal imbalance or any other underlying health condition. It is advisable to come to the clinic for proper examination and screening.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>I'm pregnant. Can I do the cervical cancer screening? </h3>
+                <div class="faq-content">
+                  <p>
+                    If you are pregnant, it’s best to wait until after delivery to avoid interruptions with your result. 
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>How soon can I come for a retest after treatment. </h3>
+                <div class="faq-content">
+                  <p>
+                    21 days after antibiotics therapy is an ideal time to come for recheck.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>How many times in a month can I take an emergency contraceptive?  </h3>
+                <div class="faq-content">
+                  <p>
+                    It is advisable not to do more than twice a month.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+              
+              <div class="faq-item">
+                <h3>My period is delayed what could be the cause.</h3>
+                <div class="faq-content">
+                  <p>
+                    If you have just used a contraceptive, Period delay is normal, another cause maybe your Hormones, Pregnancy or the presence of an infection, please visit the Clinic for Consultation.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+
+              <div class="faq-item">
+                <h3>I bleed during sex is that normal?</h3>
+                <div class="faq-content">
+                  <p>
+                    Bleeding during sex could be due to hormones, infections or physical tear on the vulva. however, if you are on any contraceptive its also normal to experience spotting after sex or in-between period.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>For how long I can use the contraceptive pill for.</h3>
+                <div class="faq-content">
+                  <p>
+                    Contraceptive pill is safe for use for up to 5 years and not more. Speak to a trained health care provider at pink clinic to know when you can switch to another method.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>How long does the IUD pain last for. </h3>
+                <div class="faq-content">
+                  <p>
+                    Intra uterine contraceptive device is fixed in through the vagina, mild pain and discomfort are expected for a few minutes to a few days after insertion however if they become unbearable, please take prescribed analgesics to relieve pain.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+              
+              <div class="faq-item">
+                <h3>I have pain during sex. Is this normal? </h3>
+                <div class="faq-content">
+                  <p>
+                    Pain is common for most women during sex, but it is not normal except it’s your first time at it. There are several reasons for pain during sex, please visit the clinic and have a consultant review and examine you.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>My STI screening result shows positive for Chlamydia, but my partner is negative, what does this mean? </h3>
+                <div class="faq-content">
+                  <p>
+                    I understand how you feel and this happens several cases. Chlamydia has an incubation period of up to 3 weeks, but it can take up to 6 weeks for it to be detected. Your partner may also be asymptomatic, making it less likely to test positive. Also, Different laboratory have different testing method for chlamydia. I encourage you to get treated as well as your partner whether he tests negative or not
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3> My partner has genital warts. Can I protect myself with a condom? </h3>
+                <div class="faq-content">
+                  <p>
+                    Condoms can help reduce the risk of transmitting genital wart but not 100%. It’s advisable that you and your partner get the required treatment, boost your immunity and get the HPV vaccine Speak to us to know more
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div><!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>I'm trying to get pregnant, but it's not working. Can you help.  </h3>
+                <div class="faq-content">
+                  <p>
+                    Yes, we can help, Inability to get pregnant can depend on a lot of factors varying from infections to hormonal disorders. We advise that you visit the clinic for a proper assessment and treatment if needed.
+                  </p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
