Updated Corporacare and Services font(made it bigger).

--- a/V1.0/services.html
+++ b/V1.0/services.html
@@ -332,7 +332,7 @@
           <div class="row">
             <div class="col-lg-8 mx-auto text-center mb-5" data-aos="fade-up" data-aos-delay="200">
               <h3>Common Sexual and non-sexual Infections.</h3>
-              <p>Discover powerful features designed to elevate your business operations to the next level of excellence.</p>
+              <p>Our team of trained sexual health professionals ensures you get quality health care services from start to finish.</p>
             </div>
           </div>
 
@@ -382,6 +382,7 @@
                     <li><i class="bi bi-check-circle"></i> High carb diet</li>
                     <li><i class="bi bi-check-circle"></i> Some form of contraceptive</li>
                   </ul>
+                  <br>
                   <h6>How do I know it’s a yeast infection?</h6>
                   <p>
                     Sadly, most vagina infections manifest with the same symptoms and signs. 
@@ -409,9 +410,9 @@
                 <div class="feature-content">
                   <h5>Chlamydia</h5>
                   <p>
-                    Chlamydia A sexually transmitted infection that occurs among men and women, young people between 16years and 29. 
+                    A sexually transmitted infection that occurs among men and women, young people between 16years and 29. 
                     Chlamydia usually affects the cervix and can cause a woman to bleed in between periods. 
-                    Other symptoms include burning sensation during pee or sex, itching, watery discharges from urethral of vagina, 
+                    Other symptoms include burning sensation during pee or sex, itching, watery discharge from the urethral or vagin, 
                     foul smell. Chlamydia can go undetected for years and if untreated will result into infertility, 
                     pelvic inflammatory diseases (PID) , ectopic pregnancies, sperm cell mortality. 
                     Note everyone gets the same symptom, some people get no symptom at all.
@@ -445,6 +446,7 @@
                     <li><i class="bi bi-check-circle"></i> Fever, swollen lymph nodes, and fatigue</li>
                     <li><i class="bi bi-check-circle"></i> In later stages, it can affect the brain, heart, and nerves/li>
                   </ul>
+                  <br>
                   <p>
                     Early detection is important in the treatment of syphilis.
                   </p>
@@ -480,6 +482,7 @@
                     <li><i class="bi bi-check-circle"></i> Pain during urination or sex</li>
                     <li><i class="bi bi-check-circle"></i> Itching or irritation</li>
                   </ul>
+                  <br>
                   <p>
                     Don’t ignore unusual symptoms. Book a screening at Pink Clinic today.
                   </p>
@@ -508,12 +511,14 @@
                     <li><i class="bi bi-check-circle"></i> Bleeding between periods</li>
                     <li><i class="bi bi-check-circle"></i> Burning sensation during sex or while urinating</li>
                   </ul>
+                  <br>
                   <h6>Causes:</h6>
                   <ul class="feature-benefits">
                     <li><i class="bi bi-check-circle"></i> Unprotected sex</li>
                     <li><i class="bi bi-check-circle"></i> Bacterial like chlamydia or viral infections like HPV</li>
                     <li><i class="bi bi-check-circle"></i> Irritants like douching or presence of contraceptive devices</li>
                   </ul>
+                  <br>
                   <p>
                     Physical examination and a cervical cancer screening can help with the diagnosis of acute cervicitis.
                   </p>
@@ -626,12 +631,14 @@
                     <li><i class="bi bi-check-circle"></i> Sharing needles</li>
                     <li><i class="bi bi-check-circle"></i> Transmission from mother to child during birth or breastfeeding</li>
                   </ul>
+                  <br>
                   <h6>How can I tell I’ve got it?</h6>
                   <ul class="feature-benefits">
                     <li><i class="bi bi-check-circle"></i> Early flu-like symptoms (fever, fatigue, swollen lymph nodes)</li>
                     <li><i class="bi bi-check-circle"></i> Unexplained weight loss</li>
                     <li><i class="bi bi-check-circle"></i> Recurrent mouth and genital infections</li>
                   </ul>
+                  <br>
                   <p>
                     Men and women who are sexually active should have themselves checked every 3 months. 
                     Our services are very private and confidential, you can get discreet testing at Pink Clinic today.
@@ -741,6 +748,7 @@
                     <li><i class="bi bi-check-circle"></i> Pain in the lower abdomen</li>
                     <li><i class="bi bi-check-circle"></i> Bleeding after sex</li>
                   </ul>
+                  <br>
                   <p>
                     Adequate screening is able to detect and differentiate gonorrhea from other STIs.
                   </p>
@@ -827,6 +835,7 @@
                     <li><i class="bi bi-check-circle"></i> Weakened immune system</li>
                     <li><i class="bi bi-check-circle"></i> Sharing contaminated personal items (e.g., towels, razors)</li>
                   </ul>
+                  <br>
                   <h6>How can I tell I’ve got it?</h6>
                   <ul class="feature-benefits">
                     <li><i class="bi bi-check-circle"></i> Painful boils or skin abscesses</li>
