Corporate Client logo removed.

--- a/V1.0/corporatecare.html
+++ b/V1.0/corporatecare.html
@@ -199,7 +199,7 @@
                     <li><i class="bi bi-check-circle"></i> Companies – Workplace awareness & wellness programs, occupational health screenings, breast and cervical cancer screening, prostate cancer screening. etc</li>
                   </ul>
                   <br>
-                  <h6>A few of our corporate client- (logo only)- Tincan, BUA, Vitafoam, platform petroleum</h6>
+                  <!--<h6>A few of our corporate client- (logo only)- Tincan, BUA, Vitafoam, platform petroleum</h6>-->
                   <div class="call-to-action-3">
                     <div class="content"> 
                       <a class="cta-btn align-self-start" href="appointment.html">Book an Appointment<br></a>
